src/frontend/ir/snapshots/shlang__frontend__ir__tests__Boolean operators.snap
---
source: src/frontend/ir/tests.rs
description: ir_expr
expression: "test_ir (\"true || (false && true)\")"
---
Ok(
    Bytecode {
        ops: [
            Push(
                Bool(
                    true,
                ),
            ),
            Push(
                Bool(
                    false,
                ),
            ),
            Push(
                Bool(
                    true,
                ),
            ),
            And,
            Or,
        ],
        span_map: SpanMap {
            map: [
                (
                    (
                        0,
                        1,
                    ),
                    0:4,
                ),
                (
                    (
                        1,
                        2,
                    ),
                    9:14,
                ),
                (
                    (
                        2,
                        3,
                    ),
                    18:22,
                ),
                (
                    (
                        3,
                        4,
                    ),
                    9:22,
                ),
                (
                    (
                        4,
                        5,
                    ),
                    0:22,
                ),
            ],
        },
        global_count: 1,
        local_count: 0,
    },
)
