src/frontend/ir/snapshots/shlang__frontend__ir__tests__Comparisions.snap
---
source: src/frontend/ir/tests.rs
description: ir_expr
expression: "test_ir\n(_test_func! (\"1 != (2 > (3 >= ( 4 < ( 5 <= (6 == (8 ?? 9) ) ) ) ) )\"))"
---
Ok(
    Ir {
        span_map: SpanMap {
            0..1 = Span[0,1],
            1..2 = Span[6,7],
            2..3 = Span[11,12],
            3..4 = Span[18,19],
            4..5 = Span[24,25],
            5..6 = Span[30,31],
            6..7 = Span[36,37],
            7..8 = Span[41,42],
            6..9 = Span[36,42],
            5..10 = Span[30,42],
            4..11 = Span[24,42],
            3..12 = Span[18,42],
            2..13 = Span[11,42],
            1..14 = Span[6,42],
            0..15 = Span[0,42],
        },
        global_count: 3,
    } = [
        Push(Int(1)),
        Push(Int(2)),
        Push(Int(3)),
        Push(Int(4)),
        Push(Int(5)),
        Push(Int(6)),
        Push(Int(8)),
        Push(Int(9)),
        NullCo,
        Eq,
        LesserEq,
        Lesser,
        GreaterEq,
        Greater,
        NotEq,
        Stop,
    ],
)
